--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/output.css" />
+    <link rel="stylesheet" href="/css/output.css" />
     <title>Project 1 / Taildwind CSS</title>
   </head>
   <body class="bg-pale-green p-5">
@@ -179,6 +179,6 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
